package com.utn.pba;

public interface Enemigo {

    void patrullar();

    void atacar(Snake snake);
}
